--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^8.42.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jest-environment-jsdom": "^29.7.0",
+    "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
