--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sentry/nextjs": "^8.42.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
