--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sentry/nextjs": "^8.42.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.3",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jest-environment-jsdom": "^29.7.0",
