--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.8.3",
     "@clerk/themes": "^2.2.0",
+    "@payloadcms/db-postgres": "^3.9.0",
+    "@payloadcms/next": "^3.9.0",
+    "@payloadcms/payload-cloud": "^3.9.0",
+    "@payloadcms/richtext-lexical": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.1",
@@ -26,10 +30,12 @@
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.10.0",
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "payload": "^3.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.13.1",
