--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-k-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
@@ -9,7 +10,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "payload:types": "PAYLOAD_CONFIG_PATH=./src/payload.config.ts payload generate:types",
+    "supabase:types": "node ./supabase/generate.js"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.8.3",
@@ -39,6 +42,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.13.1",
+    "svix": "^1.44.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
@@ -50,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^16.4.7",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "jest": "^29.7.0",
