--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@sentry/nextjs": "^8.42.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.6",
