--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@payloadcms/db-postgres": "^3.11.0",
     "@payloadcms/live-preview-react": "^3.11.0",
     "@payloadcms/next": "^3.9.0",
+    "@payloadcms/plugin-cloud-storage": "^3.12.0",
     "@payloadcms/richtext-lexical": "^3.11.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -33,6 +34,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "escape-html": "^1.0.3",
     "graphql": "^16.10.0",
