--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "graphql": "^16.10.0",
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.4",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
     "payload": "^3.9.0",
