--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sentry/nextjs": "^8.47.0",
     "@supabase/ssr": "^0.5.2",
@@ -40,6 +43,7 @@
     "graphql": "^16.10.0",
     "jest-environment-jsdom": "^29.7.0",
     "lucide-react": "^0.468.0",
+    "lz-string": "^1.5.0",
     "next": "^15.1.4",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.4",
