--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.3",
+    "@icons-pack/react-simple-icons": "^11.0.1",
     "@payloadcms/db-postgres": "^3.11.0",
     "@payloadcms/live-preview-react": "^3.11.0",
     "@payloadcms/next": "^3.9.0",
@@ -48,6 +49,7 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.14.0",
     "short-unique-id": "^5.2.0",
+    "simple-icons": "^14.2.0",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
