--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
@@ -54,7 +55,8 @@
     "simple-icons": "^14.2.0",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
