--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,8 +35,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "supabase/generate.js"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
