--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@payloadcms/plugin-cloud-storage": "^3.12.0",
     "@payloadcms/richtext-lexical": "^3.11.0",
     "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.4",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-hook/media-query": "^1.1.1",
     "@sentry/nextjs": "^8.47.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
@@ -42,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "escape-html": "^1.0.3",
     "graphql": "^16.10.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -55,10 +60,12 @@
     "react-intersection-observer": "^9.14.0",
     "short-unique-id": "^5.2.0",
     "simple-icons": "^14.2.0",
+    "sonner": "^1.7.2",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
