feat: add caching utility and event access control, implement event revalidation hooks

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "short-unique-id": "^5.2.0",
     "simple-icons": "^14.2.0",
     "sonner": "^1.7.2",
+    "superjson": "^2.2.2",
     "svix": "^1.44.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
